<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/summary_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_margin="4dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            card_view:cardBackgroundColor="@color/colorCardBackground"
            card_view:cardCornerRadius="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/weather_icon"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:paddingLeft="50dp" />

                <TextView
                    android:id="@+id/temperature_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/weather_icon"
                    android:paddingTop="30dp"
                    android:paddingLeft="10dp"
                    android:textColor="@color/colorText"
                    android:textSize="40dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/summary_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/weather_icon"
                    android:paddingTop="70dp"
                    android:paddingLeft="10dp"
                    android:textColor="@color/colorTextTransparent"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/city_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/summary_text"
                    android:gravity="center_horizontal"
                    android:paddingTop="40dp"
                    android:paddingBottom="10dp"
                    android:textColor="@color/colorText"
                    android:textSize="20dp"
                    android:scrollHorizontally="true"
                    android:ellipsize="end"
                    android:maxLines="1" />
            </RelativeLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:src="@drawable/information_outline" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/detail_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_margin="4dp"
            card_view:cardBackgroundColor="@color/colorCardBackground"
            card_view:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="20dp"
                android:paddingBottom="20dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:src="@drawable/water_percent" />

                    <TextView
                        android:id="@+id/humidity_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorText"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Humidity"
                        android:textColor="@color/colorTextTransparent"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:src="@drawable/weather_windy" />

                    <TextView
                        android:id="@+id/wind_speed_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorText"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/WindSpeed"
                        android:textColor="@color/colorTextTransparent"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:src="@drawable/eye_outline" />

                    <TextView
                        android:id="@+id/visibility_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorText"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Visibility"
                        android:textColor="@color/colorTextTransparent"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:src="@drawable/gauge" />

                    <TextView
                        android:id="@+id/pressure_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorText"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Pressure"
                        android:textColor="@color/colorTextTransparent"
                        android:textSize="18sp" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <ScrollView
            android:id="@+id/forecast_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:background="@color/colorCardBackground"
            android:fillViewport="true"
            android:radius="10dp">

            <TableLayout
                android:id="@+id/forecast_table"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:stretchColumns="1,2,3,4"></TableLayout>
        </ScrollView>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:backgroundTint="@color/colorIcon"
        app:srcCompat="@drawable/map_marker_plus" />
</android.support.design.widget.CoordinatorLayout>
